--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
   "name": "backbone.marionette-plupload-module",
-  "description": "Plupload module",
+  "description": "Plupload module for backbone marionette js",
   "version": "0.0.1",
   "directory": "backbone.marionette-pl-uploader",
   "keywords": [
     "backbone",
     "marionette",
     "plupload",
+    "module",
     "requirejs",
     "underscorejs",
     "jquery",
